--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,18 +1,26 @@
 ControlMaster auto
 ControlPath /tmp/ssh_mux_%h_%p_%r
 
-Host 220
-HostName 192.168.15.220
+Host svn
+HostName svn.iottech.cc
 User spig
 
-Host 221
-HostName 192.168.15.221
+Host dm
+HostName dm.iottech.cc
+User spig
+
+Host kb
+HostName kb.iottech.cc
+User spig
+
+Host ci
+HostName ci.iottech.cc
 User user
 
-Host 223
-HostName 192.168.15.223
+Host mi
+HostName mi.iottech.cc
 User user
 
-Host 224
-HostName 192.168.15.224
+Host hg
+HostName hg.iottech.cc
 User spig
