--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,6 +1,10 @@
 ControlMaster auto
 ControlPath /tmp/ssh_mux_%h_%p_%r
 
+Host rf
+HostName readfree.me
+User root
+
 Host svn
 HostName svn.iottech.cc
 User spig
